tab overlap fix

--- a/css/framework.css
+++ b/css/framework.css
@@ -499,7 +499,7 @@ div[class*='-heading'] .dropdown-menu:before{position:absolute;top:-8px;right:9p
 .nav-tabs>li>a,.nav-pills>li>a{padding-right:0.7778em;padding-left:0.7778em;margin-right:0;}
 .nav-tabs{border-bottom:none;margin-bottom:0px;font-family:"DIN Bold",sans-serif;font-weight:normal;}
 .nav-tabs>li{margin-bottom:-1px;margin-right:2px;border:1px solid transparent;margin-left:-1px;}
-.nav-tabs>li>a{padding-top:0.5195em;padding-bottom:0.5195em;line-height:1.42857142857143em;border:none;-webkit-border-radius:4px 4px 0 0;-moz-border-radius:4px 4px 0 0;border-radius:4px 4px 0 0;}
+.nav-tabs>li>a{padding:0.475em.7778em;position:relative;line-height:1.42857142857143em;border:none;-webkit-border-radius:4px 4px 0 0;-moz-border-radius:4px 4px 0 0;border-radius:4px 4px 0 0;}
 .nav-tabs>.active{border:1px solid rgba(0, 0, 0, 0.06);border-bottom:1px solid #fff;border-bottom:1px solid rgba(255, 255, 255, 0.25);-webkit-border-radius:4px 4px 0 0;-moz-border-radius:4px 4px 0 0;border-radius:4px 4px 0 0;}
 .nav-tabs>.active>a,.nav-tabs>.active>a:hover{color:#555555;background-color:#fff;background-color:rgba(255, 255, 255, 0.95);border:0;cursor:default;}
 .tab-content{background-color:#fff;background-color:rgba(255, 255, 255, 0.95);-webkit-border-radius:0px 4px 4px 4px;-moz-border-radius:0px 4px 4px 4px;border-radius:0px 4px 4px 4px;-webkit-box-shadow:0px 1px 4px rgba(0, 0, 0, 0.2);-moz-box-shadow:0px 1px 4px rgba(0, 0, 0, 0.2);box-shadow:0px 1px 4px rgba(0, 0, 0, 0.2);padding:10px 10px 0 10px;}
