--- a/less/framework/base/tabs.less
+++ b/less/framework/base/tabs.less
@@ -75,8 +75,8 @@
 }
 // Actual tabs (as links)
 .nav-tabs > li > a {
-  padding-top: 0.5195em;
-  padding-bottom: 0.5195em;
+  padding: 0.475em.7778em;
+  position:relative;
   line-height: @baseLineHeight;
   border: none;
   .border-radius(4px 4px 0 0);
